--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "google-map-react": "^2.2.0",
+    "insta-fetcher": "^1.3.25",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
